Fixed problem where rows in Dashboard were too tall

--- a/src/components/ArticleBlock/ArticleBlock.less
+++ b/src/components/ArticleBlock/ArticleBlock.less
@@ -86,6 +86,8 @@
       img {
         .border-radius(@radius: 3*@pixel);
         width: 100%;
+        // to stop the rows from becoming too tall
+        max-height: 200px;
       }
 
       div {
